Run 2026-02-28 (#126)
- Update AMI to run on latest LTS JDK 25, since that will be a common production deployment target moving forward
- Update AMI to use newer c8g generation of compute-optimized VM (ARM64 architecture)
- Capture raw results of fresh run in EC2 including latest library versions (run from latest master)
- Create and link published spreadsheet and graphs visualizing results of latest run
- Update README with new results