@@ -1,5 +1,69 @@
 Benchmark runs by date
 
+## 2026-02-28
+
+| Library      | Version  |
+|--------------|----------|
+| avaje-jsonb  | 1.11     |
+| boon         | 0.34     |
+| djomo        | 0.9.4    |
+| dsl-json     | 2.0.2    |
+| fastjson     | 2.0.57   |
+| flexjson     | 3.3      |
+| genson       | 1.6      |
+| gson         | 2.11.1   |
+| jackson      | 2.17.1   |
+| jodd json    | 6.0.3    |
+| johnzon      | 2.0.1    |
+| jakarta      | 2.1.3    |
+| json-io      | 4.88.0   |
+| simplejson   | 1.1.1    |
+| json-smart   | 2.5.1    |
+| logansquare  | 1.3.7    |
+| minimal-json | 0.9.5    |
+| mjson        | 1.4.1    |
+| moshi        | 1.15.1   |
+| nanojson     | 1.9      |
+| org.json     | 20240303 |
+| purejson     | 1.0.1    |
+| qson         | 1.1.1    |
+| tapestry     | 5.8.6    |
+| underscore   | 1.101    |
+| yasson       | 3.0.3    |
+| wast         | 0.0.29.1 |
+
+**`Users` model**
+
+![json deserialization performance for primitive types, String, List and simple POJOs][20260228-graph-users-deser]
+![json serialization performance for primitive types, String, List and simple POJOs][20260228-graph-users-ser]
+
+**`Clients` model**
+
+![json deserialization performance for primitive types, String, List and simple POJOs, arrays, enum, UUID, LocalDate][20260228-graph-clients-deser]
+![json serialization performance for primitive types, String, List and simple POJOs, arrays, enum, UUID, LocalDate][20260228-graph-clients-ser]
+
+**JMH configuration and hardware**
+
+Tests were run on an [Amazon EC2 c8g.xlarge](https://aws.amazon.com/ec2/instance-types/c8g/) (4 vCPU, 8 GiB RAM)
+
+```
+# JMH version: 1.35
+# VM version: JDK 25.0.2, OpenJDK 64-Bit Server VM, 25.0.2+10-LTS
+# VM invoker: /usr/lib/jvm/java-25-amazon-corretto.aarch64/bin/java
+# VM options: -Xms2g -Xmx2g --add-opens=java.base/java.time=ALL-UNNAMED --add-modules=jdk.incubator.vector
+# Blackhole mode: compiler (auto-detected, use -Djmh.blackhole.autoDetect=false to disable)
+# Warmup: 5 iterations, 10 s each
+# Measurement: 10 iterations, 3 s each
+# Timeout: 10 min per iteration
+# Threads: 3 threads, will synchronize iterations
+# Benchmark mode: Throughput, ops/time
+```
+
+**Links**
+
+* [google spreadsheet][20260228-spreadsheet]
+* [raw-results-2026-02-28.md](/archive/raw-results-2026-02-28.md)
+
 ## 2024-01-30
 
 | Library      | Version  |
@@ -442,3 +506,9 @@ Same as below, JMH 1.15.
 [20240130-graph-users-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQDBLUYgQ9BhFL_yxZidD1dRG-VYn2aFjMAwc2p6pl_J72XME4lopY8LcyHzTdC5QhISqIrSdkL-Vyt/pubchart?oid=296776676&format=image
 [20240130-graph-clients-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQDBLUYgQ9BhFL_yxZidD1dRG-VYn2aFjMAwc2p6pl_J72XME4lopY8LcyHzTdC5QhISqIrSdkL-Vyt/pubchart?oid=684555912&format=image
 [20240130-graph-clients-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vQDBLUYgQ9BhFL_yxZidD1dRG-VYn2aFjMAwc2p6pl_J72XME4lopY8LcyHzTdC5QhISqIrSdkL-Vyt/pubchart?oid=2004244401&format=image
+
+[20260228-spreadsheet]: https://docs.google.com/spreadsheets/d/1yVqx9Wvcrr9pdB0j70AcEJQSOPrztUKXI_pi-29NBOo/edit?usp=sharing
+[20260228-graph-users-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSUD5_YT6-RXIvkwRiwFDMfGmEiYkYYs2fBY5p1p2iVQU01v71JQwMqPDlLAiLf2uL9STEzpOXTp0Us/pubchart?oid=1217359585&format=image
+[20260228-graph-users-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSUD5_YT6-RXIvkwRiwFDMfGmEiYkYYs2fBY5p1p2iVQU01v71JQwMqPDlLAiLf2uL9STEzpOXTp0Us/pubchart?oid=296776676&format=image
+[20260228-graph-clients-deser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSUD5_YT6-RXIvkwRiwFDMfGmEiYkYYs2fBY5p1p2iVQU01v71JQwMqPDlLAiLf2uL9STEzpOXTp0Us/pubchart?oid=684555912&format=image
+[20260228-graph-clients-ser]: https://docs.google.com/spreadsheets/d/e/2PACX-1vSUD5_YT6-RXIvkwRiwFDMfGmEiYkYYs2fBY5p1p2iVQU01v71JQwMqPDlLAiLf2uL9STEzpOXTp0Us/pubchart?oid=2004244401&format=image
